--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alem",
-  "description": "Create applications for BOS with a focus on performance while using concepts that are based on ReactJS.",
+  "description": "Create web3 applications for NEAR BOS with a focus on performance while using concepts that are based on ReactJS.",
   "version": "0.0.1-alpha.1",
   "main": "main.js",
   "author": "Wenderson - wendersonpires.near",
