--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "alem",
   "description": "Create web3 applications for NEAR BOS with a focus on performance while using concepts that are based on ReactJS.",
-  "version": "0.0.1-alpha.2",
+  "version": "0.0.1-alpha.3",
   "main": "main.js",
   "author": "Wenderson Pires - wendersonpires.near",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wpdas/near-react.git"
