--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "alem",
   "description": "Create web3 applications for NEAR BOS with a focus on performance while using concepts that are based on ReactJS.",
-  "version": "0.0.1-alpha.8",
+  "version": "0.0.1-alpha.9",
   "main": "main.js",
+  "types": "index.d.ts",
   "author": "Wenderson Pires - wendersonpires.near",
   "license": "MIT",
   "repository": {
