--- a/.github/workflows/deploy-testnet.yml
+++ b/.github/workflows/deploy-testnet.yml
@@ -1,4 +1,4 @@
-name: Deploy BOS DApp (built using Alem)
+name: Deploy BOS DApp - Testnet - (built using Alem)
 on:
   workflow_call:
     inputs:
@@ -43,12 +43,6 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -LsSf https://github.com/FroVolod/bos-cli-rs/releases/download/v${{ inputs.cli-version }}/bos-cli-installer.sh | sh
 
-      - name: Configure non-archival RPC endpoint
-        run: |
-          mkdir -p ~/.config/near-cli
-          touch ~/.config/near-cli/config.toml
-          echo -e "credentials_home_dir = \"/home/runner/.near-credentials\"\n[network_connection.mainnet]\nnetwork_name = \"mainnet\"\nrpc_url = \"https://rpc.mainnet.near.org/\"\nwallet_url = \"https://app.mynearwallet.com/\"\nexplorer_transaction_url = \"https://nearblocks.io/txns/\"" > ~/.config/near-cli/config.toml
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -67,4 +61,4 @@ jobs:
         run: |
           pwd
           cd "$WORKSPACE_DIRECTORY/build"
-          bos components deploy "$SIGNER_ACCOUNT_ID" sign-as "$SIGNER_ACCOUNT_ID" network-config mainnet sign-with-plaintext-private-key --signer-public-key "$SIGNER_PUBLIC_KEY" --signer-private-key "$SIGNER_PRIVATE_KEY" send
+          bos components deploy "$SIGNER_ACCOUNT_ID" sign-as "$SIGNER_ACCOUNT_ID" network-config testnet sign-with-plaintext-private-key --signer-public-key "$SIGNER_PUBLIC_KEY" --signer-private-key "$SIGNER_PRIVATE_KEY" send
