--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.18.2",
     "mock-fs": "^5.2.0",
     "near-cli-rs": "^0.4.3",
+    "node-html-parser": "^6.1.12",
     "prettier": "^3.1.0",
     "socket.io": "^4.7.2",
     "sucrase": "^3.34.0"
