--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
     "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@babel/traverse": "^7.24.1",
     "@babel/types": "^7.24.0",
     "bos-cli": "^0.3.6",
