--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "near-cli-rs": "^0.4.3",
     "node-html-parser": "^6.1.12",
     "prettier": "^3.1.0",
+    "recast": "^0.23.6",
     "socket.io": "^4.7.2",
     "sucrase": "^3.34.0"
   },
