--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mock-fs": "^5.2.0",
     "near-cli-rs": "^0.4.3",
     "node-html-parser": "^6.1.12",
