deploy-testnet.yml update

--- a/.github/workflows/deploy-testnet.yml
+++ b/.github/workflows/deploy-testnet.yml
@@ -52,6 +52,10 @@ jobs:
         run: |
           npm install alem -g
 
+      - name: Install Dependencies
+        run: |
+            npm install
+
       - name: Build the workspaces
         run: |
           cd "$WORKSPACE_DIRECTORY"
