--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alem",
   "description": "Create web3 applications for NEAR BOS with a focus on performance and friendly development.",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "main": "main.js",
   "types": "index.d.ts",
   "author": "Wenderson Pires - wendersonpires.near",
@@ -41,19 +41,24 @@
     "@babel/preset-typescript": "^7.24.1",
     "@babel/traverse": "^7.24.1",
     "@babel/types": "^7.24.0",
+    "autoprefixer": "^10.4.19",
     "bos-cli": "^0.3.6",
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
     "crypto-js": "^4.2.0",
+    "cssnano": "^7.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mock-fs": "^5.2.0",
     "near-cli-rs": "^0.4.3",
     "node-html-parser": "^6.1.12",
+    "postcss": "^8.4.38",
+    "postcss-nested": "^6.0.1",
     "prettier": "^3.1.0",
     "socket.io": "^4.7.2",
-    "sucrase": "^3.34.0"
+    "sucrase": "^3.34.0",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
