--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss": "^8.4.38",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.1.0",
+    "sharp": "^0.33.4",
     "socket.io": "^4.7.2",
     "sucrase": "^3.34.0",
     "tailwindcss": "^3.4.3"
